WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57844
[Gtk] plugins/set-status.html fails
https://bugs.webkit.org/show_bug.cgi?id=57844
Summary
[Gtk] plugins/set-status.html fails
Zan Dobersek
Reported
2011-04-05 07:28:24 PDT
Test plugins/set-status.html fails because status bar text is not printed from DRT (in webViewStatusBarTextChanged) if it is an empty string.
Attachments
Proposed patch
(2.45 KB, patch)
2011-04-05 07:42 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2011-04-05 07:42:18 PDT
Created
attachment 88230
[details]
Proposed patch This patch makes DRT output status text even if it is an empty string.
WebKit Commit Bot
Comment 2
2011-04-06 11:41:09 PDT
Comment on
attachment 88230
[details]
Proposed patch Clearing flags on attachment: 88230 Committed
r83077
: <
http://trac.webkit.org/changeset/83077
>
WebKit Commit Bot
Comment 3
2011-04-06 11:41:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug