2011-04-06  Zan Dobersek  <zandobersek@gmail.com>

Reviewed by Eric Seidel.

        [Gtk] plugins/set-status.html fails
        https://bugs.webkit.org/show_bug.cgi?id=57844

        Unskip a newly-passing test.

        * platform/gtk/Skipped:
2011-04-06  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Eric Seidel.

        [Gtk] plugins/set-status.html fails
        https://bugs.webkit.org/show_bug.cgi?id=57844

        Allow an empty status text to be dumped.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (webViewStatusBarTextChanged):

Canonical link: https://commits.webkit.org/72857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83077 268f45cc-cd09-0410-ab3c-d52691b4dbfc